<resources>
    <string name="app_name">MyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="save">SAV</string>
    <string name="retrieve">RET</string>
    <string name="negate">-+</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="decimal_zero">0.0</string>
    <string name="loading">Loading...</string>
    <string name="lowest_tip">10%</string>
    <string name="middle_tip">15%</string>
    <string name="highest_tip">20%</string>

</resources>
