<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/colorCalculatorTop"
android:orientation="vertical"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.young.mycalc.MainActivity"
tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/displayWindow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/input_history_text_view"
            android:textSize="24sp"
            android:textAlignment="viewEnd"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/current_number_text_view"
            android:textSize="48sp"
            android:textAlignment="viewEnd" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorCalculatorBottom"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ten_percent_button"
                android:textSize="30sp"
                android:text="@string/ten_percent"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="tenPercent"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/fifteen_percent_button"
                android:textSize="30sp"
                android:text="@string/fifteen_percent"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="fifteenPercent"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/twenty_percent_button"
                android:textSize="30sp"
                android:text="@string/twenty_percent"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="twentyPercent"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/divide_button"
                android:textSize="48sp"
                android:text="@string/divide"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="divide"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/clear_button"
                android:textSize="48sp"
                android:text="@string/clear"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="clear"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/seven_button"
                android:textSize="48sp"
                android:text="@string/seven"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="seven"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/eight_button"
                android:textSize="48sp"
                android:text="@string/eight"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="eight"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/nine_button"
                android:textSize="48sp"
                android:text="@string/nine"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="nine"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/multiply_button"
                android:textSize="48sp"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="multiply"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/delete_button"
                android:textSize="36sp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="delete"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/four_button"
                android:textSize="48sp"
                android:text="@string/four"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="four"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/five_button"
                android:textSize="48sp"
                android:text="@string/five"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="five"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/six_button"
                android:textSize="48sp"
                android:text="@string/six"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="six"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/minus_button"
                android:textSize="48sp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="minus"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/negate_button"
                android:textSize="48sp"
                android:text="@string/negate"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="negate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/one_button"
                android:textSize="48sp"
                android:text="@string/one"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="one"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/two_button"
                android:textSize="48sp"
                android:text="@string/two"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="two"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/three_button"
                android:textSize="48sp"
                android:text="@string/three"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="three"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/plus_button"
                android:textSize="48sp"
                android:text="@string/plus"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="plus"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/retrieve_button"
                android:textSize="36sp"
                android:text="@string/retrieve"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="retrieve"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:id="@+id/zero_button"
                android:textSize="48sp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="zero"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/decimal_button"
                android:textSize="48sp"
                android:text="@string/dot"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="dot"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/equal_button"
                android:textSize="48sp"
                android:text="@string/equal"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="equal"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:textSize="36sp"
                android:text="@string/save"
                android:textAlignment="center"
                android:background="@color/colorRegularButton"
                android:onClick="save"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
